--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "concurrently \"rollup -c -w\" \"sirv public --no-clear --dev --single\"",
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-terser": "^0.4.0",
+    "concurrently": "^9.1.2",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -19,6 +20,10 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "gsap": "^3.12.7",
+    "scrolltrigger": "^1.0.1",
+    "sirv-cli": "^2.0.0",
+    "svelte-app": "file:",
+    "svelte-routing": "^2.13.0"
   }
 }
