--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-terser": "^0.4.0",
+    "@tsconfig/svelte": "^5.0.4",
     "concurrently": "^9.1.2",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-svelte": "^7.1.2",
-    "svelte": "^3.55.0"
+    "svelte": "^4.2.19",
+    "svelte-preprocess": "^6.0.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -26,13 +31,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/svelte-fontawesome": "^0.2.3",
+    "@milkdown/plugin-prism": "^7.10.4",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
-    "@rollup/plugin-replace": "^6.0.2",
+    "dompurify": "^3.2.5",
     "easymde": "^2.20.0",
     "font-awesome": "^4.7.0",
     "gsap": "^3.12.7",
-    "marked": "^15.0.8",
+    "install": "^0.13.0",
+    "marked": "^15.0.11",
+    "nanoid": "^5.1.5",
+    "npm": "^11.4.0",
     "pdfjs-dist": "^5.1.91",
     "plyr": "^3.7.8",
     "rollup-plugin-dotenv": "^0.5.1",
@@ -40,11 +49,14 @@
     "sirv-cli": "^2.0.0",
     "svelte-app": "file:",
     "svelte-carousel": "^1.0.25",
+    "svelte-dnd-action": "^0.9.61",
     "svelte-easy-crop": "^3.0.1",
     "svelte-material-icons": "^3.0.5",
-    "svelte-pdf": "^1.0.20",
+    "svelte-pdf": "^1.0.27",
     "svelte-routing": "^2.13.0",
+    "svelte-tiptap": "^2.1.0",
     "swiper": "^11.2.6",
+    "uuid": "^11.1.0",
     "vite": "^6.2.3"
   }
 }
