--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@milkdown/plugin-prism": "^7.10.4",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "chart.js": "^4.5.1",
     "dompurify": "^3.2.5",
     "easymde": "^2.20.0",
     "font-awesome": "^4.7.0",
@@ -49,6 +50,7 @@
     "sirv-cli": "^2.0.0",
     "svelte-app": "file:",
     "svelte-carousel": "^1.0.25",
+    "svelte-chartjs": "^3.1.5",
     "svelte-dnd-action": "^0.9.22",
     "svelte-easy-crop": "^3.0.1",
     "svelte-i18n": "^4.0.0",
