--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "svelte-tiptap": "^2.1.0",
     "swiper": "^11.2.6",
     "uuid": "^11.1.0",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "@xyflow/svelte": "^0.1.19"
   }
 }
