--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@milkdown/plugin-prism": "^7.10.4",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@sentry/svelte": "^10.26.0",
+    "html2canvas": "^1.4.1",
+    "@xyflow/svelte": "^0.1.19",
     "chart.js": "^4.5.1",
     "dompurify": "^3.2.5",
     "easymde": "^2.20.0",
@@ -62,7 +65,6 @@
     "svelte-tiptap": "^2.1.0",
     "swiper": "^11.2.6",
     "uuid": "^11.1.0",
-    "vite": "^6.2.3",
-    "@xyflow/svelte": "^0.1.19"
+    "vite": "^6.2.3"
   }
 }
