feat: kaiwa view

--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
     "@milkdown/plugin-prism": "^7.10.4",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@pixiv/three-vrm": "^3.4.5",
     "@sentry/svelte": "^10.26.0",
-    "html2canvas": "^1.4.1",
     "@xyflow/svelte": "^0.1.19",
     "chart.js": "^4.5.1",
     "dompurify": "^3.2.5",
     "easymde": "^2.20.0",
     "font-awesome": "^4.7.0",
     "gsap": "^3.12.7",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "marked": "^15.0.11",
     "nanoid": "^5.1.5",
@@ -64,6 +65,7 @@
     "svelte-spa-router": "^4.0.1",
     "svelte-tiptap": "^2.1.0",
     "swiper": "^11.2.6",
+    "three": "^0.182.0",
     "uuid": "^11.1.0",
     "vite": "^6.2.3"
   }
